# guacamayo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  quick-start.md
.claude/: settings.local.json  statusline.js
.claude/docs/: tooling-ledger.md
.claude/hooks/: dream-ledger-gate.sh  worktree-cleanup.sh
.sounding/: context-dashboard.html  dashboard.html  growth-log.md  growth.md  insights-log.md  portfolio.md  queue.md  sounding.md  tooling-ledger-log.md  tooling-ledger.md  user.md
.sounding/genesis/: genesis.md  genesis_log.txt  p4.md  user_seed.md
.sounding/insights/: 2026-07-20.md
.sounding/notes/: agentic-protocols-general-vs-specific.md  handover.md  listen-wiseer-knowledge-plan.md  multiagent-knowledge-schema.md
.sounding/reflections/: 2026-07-14_18-48.md  2026-07-14_19-41.md  2026-07-15_19-11.md  2026-07-16_01-15.md  2026-07-16_22-00.md  2026-07-17_18-32.md  2026-07-18_13-50.md  2026-07-19_17-09.md  2026-07-19_20-03.md  2026-07-19_22-28.md  2026-07-19_23-07.md  2026-07-20_01-22.md  2026-07-20_02-23.md  2026-07-20_03-26.md  2026-07-20_17-37.md  2026-07-20_21-28.md  2026-07-22_12-03.md  2026-07-22_15-06.md  2026-07-22_17-19.md  2026-07-22_18-13.md  2026-07-23_20-58.md  2026-07-24_00-12.md  2026-07-24_13-12.md  2026-07-24_14-32.md  chat-logs.md  emergence-reflection.md  reflection-logs.md
claude-companion/: README.md  package-lock.json  package.json  tsconfig.json
review/: cli.py  commit_verification.py  config.py  deduplication.py  sanyi.py  validation.py
scripts/: hygiene.sh  pulse.sh
(+81 files in other folders)
