[project]
name = "review-cli"
version = "0.1.0"
description = "Deterministic backbone for the review pipeline"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "click>=8.0"]

[project.scripts]
review-cli = "review.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["review"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLW1510"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.11"]
